<resources>
    <string name="app_name">Cumulonimbus</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="forecast">Forecast</string>
    <string name="uv_index_title">Ultraviolet Index</string>

    <string name="pref_curr_location_title">Use your current location? </string>
    <string name="pref_custom_location_def">No custom location chosen</string>
    <string name="pref_custom_location_title">Choose a custom location</string>
    <string name="pref_metrics">Use metric units ?</string>

    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="rain_volume">Rain Volume</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="visibility">Visibility</string>

    <string name="cardview_transition_name">BackCardView</string>
    <string name="background_transition_name">BckgroundLayout</string>

    <string name="pref_curr_location_key">bool_current_location</string>
    <string name="pref_custom_location_key">custom_location</string>
    <string name="pref_metrics_key">bool_use_metrics</string>

    <string name="date_header_text">Date</string>
    <string name="description_header_text">Description</string>
    <string name="temperature_header_text">Temp</string>
    <string name="_3_hour_forecast">3 hour forecast</string>
    <string name="detail_forecast">Details at current time</string>
    <string name="today_at_a_glance">Today at a glance</string>
    <string name="next_four_days">Next four days</string>

    <string name="about_activity_name">About</string>
    <string name="about_the_app">A simple yet bold open-source weather app made by yours truly.</string>
    <string name="about_activity_author_name">N. Abhishek (Kodatos)</string>
    <string name="about_activity_feedback">Feedback</string>
    <string name="about_activity_feedback_desc">Send an email to provide me feedback for this app</string>
    <string name="about_activity_playstore">Play Store</string>
    <string name="about_activity_playstore_desc">Please leave a rating and review</string>
    <string name="about_activity_source_code">Source Code</string>
    <string name="about_activity_source_code_desc">View the source code on Github</string>
    <string name="about_activity_licenses">Licenses</string>
    <string name="about_activity_licenses_desc">Attributions for open source libraries used</string>

    <string name="welcome_title_1">Welcome to Cumulonimbus!</string>
    <string name="welcome_title_2">Few permissions first!</string>
    <string name="welcome_title_3">Lets adapt the app for you</string>
    <string name="welcome_title_4">All Set!</string>
    <string name="welcome_description_1">A simple, bold and to the point weather app for your frequent needs. Go through this short
            initial setup to make this app run better!</string>
    <string name="welcome_description_2">The app needs to access your location for getting the weather. Uncheck the checkbox below
            if you want to use a custom location and not provide your current location data. You can revert this later on.</string>
    <string name="welcome_description_4">Enjoy Cumulonimbus and check Settings for more stuff.</string>
    <string name="welcome_screen_current_location_check">USE YOUR CURRENT LOCATION \t\t\t\t</string>
    <string name="welcome_screen_custom_location">Enter a location of your choice</string>
    <string name="welcome_screen_validation_button">Validate Settings</string>
    <string name="permission_required">I don\'t want to use my current location</string>

    <string name="location_search_failed">Search Failed</string>
    <string name="location_search_failed_desc">Sorry, the location you entered could\'nt be found using device resources.
        Please enter a city level name and try again</string>
    <string name="location_verify_title">Verify:</string>
    <string name="add_a_new_location">Add a new location</string>
    <string name="enter_your_location_hint">Enter your location here</string>
    <string name="locations_empty_text">No locations are present. Add one!</string>
    <string name="custom_locations_title">Your Locations</string>
    <string name="charts_title">NEXT 24 HOURS</string>
    <string name="graphs_activity_title">Graphs</string>
</resources>
