<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2017 N Abhishek (aka Kodatos)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/preferenceSlideTitle"
            style="@style/PriorityOneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:text="@string/welcome_title_3"
            android:textAlignment="center"
            android:textColor="@color/textColorSecondaryInverse"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/preferenceSlideImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/preferenceSlideImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_city_preferences"
            android:tint="@color/textColorPrimaryInverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36"
            />

        <CheckedTextView
            android:id="@+id/preferenceSlideCurrentLocationCheck"
            style="@style/PriorityTwoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:checkMarkTint="@color/textColorSecondaryInverse"
            android:checked="true"
            android:gravity="center"
            android:text="@string/welcome_screen_current_location_check"
            android:textColor="@color/textColorSecondaryInverse"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferenceSlideImageView" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/preferenceSlideCustomLocationInputWrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/welcome_screen_custom_location_hint"
            android:textColorHint="@color/textColorTertiaryInverse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferenceSlideCurrentLocationCheck"
            tools:ignore="LabelFor">

            <EditText
                android:id="@+id/preferenceSlideCustomLocationInput"
                style="@style/PriorityTwoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textColorSecondaryInverse"
                android:inputType="textAutoCorrect"
                android:textColor="@color/textColorSecondaryInverse"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/preferenceSlideSyncButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:elevation="4dp"
            android:text="@string/welcome_screen_validation_button"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferenceSlideCustomLocationInputWrapper" />

        <ProgressBar
            android:id="@+id/preferenceSlideValidatingProgressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/textColorPrimaryInverse"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferenceSlideSyncButton" />
    </android.support.constraint.ConstraintLayout>
</layout>