<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="#f5f5f5">

        <android.support.constraint.Guideline
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".25" />

        <android.support.v7.widget.CardView
            android:id="@+id/imageViewBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/_09d_background">

            <ImageView
                android:id="@+id/newLocationImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_location_custom"
                android:tint="@color/textColorPrimaryInverse"
                tools:ignore="ContentDescription" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/newLocationDialogTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:fontFamily="@font/poppins_bold"
            app:layout_constraintBottom_toTopOf="@+id/locationTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/separator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/add_a_new_location" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/locationTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_location_hint"
            android:textColorHint="@color/textColorTertiary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/positiveAction"
            app:layout_constraintEnd_toEndOf="@id/newLocationDialogTitle"
            app:layout_constraintStart_toStartOf="@id/newLocationDialogTitle"
            app:layout_constraintTop_toBottomOf="@id/newLocationDialogTitle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/locationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:inputType="textAutoCorrect"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/verifyLocationTitle"
            style="@style/PriorityOneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location_verify_title"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/geocodedLocationText"
            app:layout_constraintEnd_toEndOf="@id/newLocationDialogTitle"
            app:layout_constraintStart_toStartOf="@id/newLocationDialogTitle"
            app:layout_constraintTop_toBottomOf="@id/locationTextInputLayout" />

        <TextView
            android:id="@+id/geocodedLocationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/textColorSecondaryAlt"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/positiveAction"
            app:layout_constraintEnd_toEndOf="@id/newLocationDialogTitle"
            app:layout_constraintStart_toStartOf="@id/newLocationDialogTitle"
            app:layout_constraintTop_toBottomOf="@id/verifyLocationTitle"
            tools:text="Delhi, India\nCoordinates: 27.27, 71.32" />

        <android.support.constraint.Group
            android:id="@+id/verifyLocationGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="geocodedLocationText,verifyLocationTitle" />

        <TextView
            android:id="@+id/positiveAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geocodedLocationText"
            android:text="Search" />

        <TextView
            android:id="@+id/negativeAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:textColor="@color/colorAccent"
            app:layout_constraintBaseline_toBaselineOf="@id/positiveAction"
            app:layout_constraintEnd_toStartOf="@id/positiveAction"
            android:text="Cancel" />

    </android.support.constraint.ConstraintLayout>
</layout>